; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/libsas/extr_sas_ata.c_sas_ata_clear_pending.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/libsas/extr_sas_ata.c_sas_ata_clear_pending.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.domain_device = type { i64 }
%struct.ex_phy = type { i32 }

@SATA_PENDING = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.domain_device*, %struct.ex_phy*)* @sas_ata_clear_pending to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sas_ata_clear_pending(%struct.domain_device* %0, %struct.ex_phy* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.domain_device*, align 8
  %5 = alloca %struct.ex_phy*, align 8
  %6 = alloca i32, align 4
  store %struct.domain_device* %0, %struct.domain_device** %4, align 8
  store %struct.ex_phy* %1, %struct.ex_phy** %5, align 8
  %7 = load %struct.domain_device*, %struct.domain_device** %4, align 8
  %8 = getelementptr inbounds %struct.domain_device, %struct.domain_device* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @SATA_PENDING, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %21

13:                                               ; preds = %2
  %14 = load %struct.domain_device*, %struct.domain_device** %4, align 8
  %15 = load %struct.ex_phy*, %struct.ex_phy** %5, align 8
  %16 = call i32 @sas_get_ata_info(%struct.domain_device* %14, %struct.ex_phy* %15)
  store i32 %16, i32* %6, align 4
  %17 = load i32, i32* %6, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %13
  store i32 0, i32* %3, align 4
  br label %21

20:                                               ; preds = %13
  store i32 1, i32* %3, align 4
  br label %21

21:                                               ; preds = %20, %19, %12
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @sas_get_ata_info(%struct.domain_device*, %struct.ex_phy*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
